--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Phishing Landing Page</title>
 </head>
 <body>
-    <h1>Account Verification</h1>
+    <h1>Year Up Account Verification</h1>
     <p>Please verify your account details to continue.</p>
     <form action="#" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email"><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password"><br><br>
         <input type="submit" value="Verify">
